; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_hangcheck.c_head_stuck.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_hangcheck.c_head_stuck.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_engine_cs = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i32 }

@ENGINE_ACTIVE_HEAD = common dso_local global i32 0, align 4
@ENGINE_ACTIVE_SUBUNITS = common dso_local global i32 0, align 4
@ENGINE_DEAD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.intel_engine_cs*, i64)* @head_stuck to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @head_stuck(%struct.intel_engine_cs* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.intel_engine_cs*, align 8
  %5 = alloca i64, align 8
  store %struct.intel_engine_cs* %0, %struct.intel_engine_cs** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %4, align 8
  %8 = getelementptr inbounds %struct.intel_engine_cs, %struct.intel_engine_cs* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %6, %10
  br i1 %11, label %12, label %18

12:                                               ; preds = %2
  %13 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %4, align 8
  %14 = getelementptr inbounds %struct.intel_engine_cs, %struct.intel_engine_cs* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = call i32 @memset(i32* %15, i32 0, i32 4)
  %17 = load i32, i32* @ENGINE_ACTIVE_HEAD, align 4
  store i32 %17, i32* %3, align 4
  br label %26

18:                                               ; preds = %2
  %19 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %4, align 8
  %20 = call i32 @subunits_stuck(%struct.intel_engine_cs* %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %24, label %22

22:                                               ; preds = %18
  %23 = load i32, i32* @ENGINE_ACTIVE_SUBUNITS, align 4
  store i32 %23, i32* %3, align 4
  br label %26

24:                                               ; preds = %18
  %25 = load i32, i32* @ENGINE_DEAD, align 4
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %24, %22, %12
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @subunits_stuck(%struct.intel_engine_cs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
